@@ -1,3 +1,8 @@
+2002-07-31  Miguel Sofer  <msofer@users.sourceforge.net>
+
+	* generic/tclInterp.c: signed/unsigned comparison warning fixed
+	(Vince Darley).
+
 2002-07-31  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
 
 	* unix/tcl.m4 (SC_BUGGY_STRTOD): Enabled caching of test results.
